--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 license = { text = "Apache-2.0" }
 requires-python = ">=3.11"
 authors = [
-    { name = "Unay Santisteban", email = "usantisteban@outlook.com" }
+    { name = "Unay Santisteban", email = "usantisteban@othercode.io" }
 ]
 keywords = ["django", "testing", "assertions", "fluent", "pytest"]
 classifiers = [
@@ -15,7 +15,6 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
@@ -33,9 +32,9 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/usantisteban/pyssertive"
-Repository = "https://github.com/usantisteban/pyssertive.git"
-Issues = "https://github.com/usantisteban/pyssertive/issues"
+Homepage = "https://github.com/othercodes/pyssertive"
+Repository = "https://github.com/othercodes/pyssertive.git"
+Issues = "https://github.com/othercodes/pyssertive/issues"
 
 [build-system]
 requires = ["setuptools>=70.0.0"]
@@ -77,7 +76,6 @@ addopts = "--cov=pyssertive --cov-report=term-missing --cov-fail-under=100"
 [tool.coverage.run]
 branch = true
 source = ["src/pyssertive"]
-omit = ["src/pyssertive/db.py"]
 
 [tool.coverage.report]
 exclude_lines = [
