chore: improve test workflow with staged jobs and Django matrix
- Split workflow into stages: lint → test → ci-success
- Add typecheck job with mypy (non-blocking)
- Add Python × Django version matrix (3.11+4.2, 3.12+5.0, 3.13+5.1)
- Add concurrency control to cancel duplicate runs
- Add ci-success final gate to verify all jobs passed
- Add mypy and django-stubs to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ dev = [
     "pytest-django>=4.8.0",
     "pytest-cov>=6.0.0",
     "ruff>=0.9.0",
+    "mypy>=1.0.0",
+    "django-stubs>=5.0.0",
 ]
 
 [tool.ruff]
@@ -83,3 +85,14 @@ exclude_lines = [
     "pragma: no branch",
     "if TYPE_CHECKING:",
 ]
+
+[tool.mypy]
+python_version = "3.11"
+plugins = ["mypy_django_plugin.main"]
+strict = false
+warn_return_any = true
+warn_unused_ignores = true
+disallow_untyped_defs = false
+
+[tool.django-stubs]
+django_settings_module = "tests.app.settings"
