--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,6 @@ on:
     tags:
       - "v*.*.*"
 
-  workflow_dispatch:
-    inputs:
-      confirm_master:
-        description: "Type 'master' to confirm release from master branch"
-        required: true
-        type: string
-
 jobs:
   validate:
     name: Validate Release
@@ -26,8 +19,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Validate Branch (Tag Push)
-        if: github.event_name == 'push'
+      - name: Validate Branch
         run: |
           TAG_COMMIT=$(git rev-list -n 1 ${{ github.ref_name }})
 
@@ -39,33 +31,11 @@ jobs:
 
           echo "✅ Tag ${{ github.ref_name }} is on master branch"
 
-      - name: Validate Branch (Manual Dispatch)
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          if [ "${{ github.ref_name }}" != "master" ]; then
-            echo "❌ ERROR: Manual release must be run from master branch"
-            echo "Current branch: ${{ github.ref_name }}"
-            exit 1
-          fi
-
-          if [ "${{ inputs.confirm_master }}" != "master" ]; then
-            echo "❌ ERROR: Confirmation failed"
-            echo "You must type 'master' to confirm release"
-            exit 1
-          fi
-
-          echo "✅ Manual release confirmed on master branch"
-
       - name: Extract Version
         id: version
         run: |
-          if [ "${{ github.event_name }}" == "push" ]; then
-            VERSION="${{ github.ref_name }}"
-            VERSION="${VERSION#v}"
-          else
-            VERSION=$(grep -oP '^version = "\K[^"]+' pyproject.toml)
-          fi
-
+          VERSION="${{ github.ref_name }}"
+          VERSION="${VERSION#v}"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           echo "📦 Version: $VERSION"
 
@@ -166,7 +136,6 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: [validate, publish-pypi]
-    if: github.event_name == 'push'
 
     permissions:
       contents: write
