fix(release): update installation script to configure Django settings for pyssertive

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,15 @@ jobs:
       - name: Install Package
         run: |
           pip install dist/*.whl
-          python -c "from pyssertive.http import FluentHttpAssertClient; print('✅ pyssertive installed successfully')"
+          pip show pyssertive
+          python -c "
+          import os
+          os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'django.conf.global_settings')
+          import django
+          django.conf.settings.configure(DEBUG=True)
+          from pyssertive.http import FluentHttpAssertClient
+          print('✅ pyssertive installed successfully')
+          "
 
   publish-pypi:
     name: Publish to PyPI
