--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,21 +94,50 @@ jobs:
           uv pip install "Django~=${{ matrix.django-version }}.0"
 
       - name: Run tests
-        run: uv run pytest --cov=pyssertive --cov-report=term-missing --cov-fail-under=100
+        run: uv run pytest --cov=pyssertive --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=100
+
+      - name: Upload coverage artifact
+        if: matrix.python-version == '3.13'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.xml
+
+  sonarcloud:
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    needs: [test]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download coverage artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, test]
+    needs: [lint, typecheck, test, sonarcloud]
     if: always()
 
     steps:
       - name: Check all jobs
         run: |
           echo "===== Job Results ====="
-          echo "Lint:      ${{ needs.lint.result }}"
-          echo "Typecheck: ${{ needs.typecheck.result }}"
-          echo "Test:      ${{ needs.test.result }}"
+          echo "Lint:       ${{ needs.lint.result }}"
+          echo "Typecheck:  ${{ needs.typecheck.result }}"
+          echo "Test:       ${{ needs.test.result }}"
+          echo "SonarCloud: ${{ needs.sonarcloud.result }}"
           echo "======================="
 
           if [ "${{ needs.lint.result }}" != "success" ]; then
@@ -123,6 +152,10 @@ jobs:
 
           if [ "${{ needs.typecheck.result }}" == "failure" ]; then
             echo "⚠️ Typecheck failed (non-blocking)"
+          fi
+
+          if [ "${{ needs.sonarcloud.result }}" == "failure" ]; then
+            echo "⚠️ SonarCloud failed (non-blocking)"
           fi
 
           echo "✅ All required checks passed!"
