--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,11 @@ Repository = "https://github.com/othercodes/pyssertive.git"
 Issues = "https://github.com/othercodes/pyssertive/issues"
 
 [build-system]
-requires = ["setuptools>=70.0.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.hatch.build.targets.wheel]
+packages = ["src/pyssertive"]
 
 [dependency-groups]
 dev = [
